// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > marks > bold > html 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "bold",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > bold > markdown 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "bold",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > code > html 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "code",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > code > markdown 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "code",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > italic > html 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "italic",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > italic > markdown 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "italic",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > link > html 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "attrs": {
              "class": null,
              "href": "http://example.org",
              "rel": "noopener noreferrer nofollow",
              "target": "_blank",
            },
            "type": "link",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > link > markdown 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "attrs": {
              "class": null,
              "href": "http://example.org",
              "rel": "noopener noreferrer nofollow",
              "target": "_blank",
            },
            "type": "link",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > link > markdown with linkify 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "attrs": {
              "class": null,
              "href": "http://example.org",
              "rel": "noopener noreferrer nofollow",
              "target": "_blank",
            },
            "type": "link",
          },
        ],
        "text": "http://example.org",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > strike > html 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "strike",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > strike > markdown 1`] = `
[
  {
    "content": [
      {
        "marks": [
          {
            "type": "strike",
          },
        ],
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > text > link 1`] = `
[
  {
    "content": [
      {
        "text": "http://example.org",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > text > soft break 1`] = `
[
  {
    "content": [
      {
        "text": "example1 example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > marks > text > text 1`] = `
[
  {
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > bullet list > html 1`] = `
[
  {
    "attrs": {
      "tight": true,
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "example1",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "example2",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "bulletList",
  },
]
`;

exports[`parse > nodes > bullet list > markdown marker \`*\` 1`] = `
[
  {
    "attrs": {
      "tight": false,
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "example1",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "example2",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "bulletList",
  },
]
`;

exports[`parse > nodes > bullet list > markdown marker \`-\` 1`] = `
[
  {
    "attrs": {
      "tight": false,
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "example1",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "example2",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "bulletList",
  },
]
`;

exports[`parse > nodes > code block > html 1`] = `
[
  {
    "attrs": {
      "language": null,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "codeBlock",
  },
]
`;

exports[`parse > nodes > code block > markdown 1`] = `
[
  {
    "attrs": {
      "language": null,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "codeBlock",
  },
]
`;

exports[`parse > nodes > fence > markdown 1`] = `
[
  {
    "attrs": {
      "language": null,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "codeBlock",
  },
]
`;

exports[`parse > nodes > fence > markdown with lang 1`] = `
[
  {
    "attrs": {
      "language": "js",
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "codeBlock",
  },
]
`;

exports[`parse > nodes > hard break > html 1`] = `
[
  {
    "content": [
      {
        "text": "example1",
        "type": "text",
      },
      {
        "type": "hardBreak",
      },
      {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > hard break > markdown 1`] = `
[
  {
    "content": [
      {
        "text": "example1",
        "type": "text",
      },
      {
        "type": "hardBreak",
      },
      {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > hard break > markdown with breaks option + inline 1`] = `
[
  {
    "text": "example1",
    "type": "text",
  },
  {
    "type": "hardBreak",
  },
  {
    "text": "example2",
    "type": "text",
  },
]
`;

exports[`parse > nodes > hard break > markdown with breaks option 1`] = `
[
  {
    "content": [
      {
        "text": "example1",
        "type": "text",
      },
      {
        "type": "hardBreak",
      },
      {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > headings > html h1 1`] = `
[
  {
    "attrs": {
      "level": 1,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > headings > markdown h1 1`] = `
[
  {
    "attrs": {
      "level": 1,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > headings > markdown h2 1`] = `
[
  {
    "attrs": {
      "level": 2,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > headings > markdown h3 1`] = `
[
  {
    "attrs": {
      "level": 3,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > headings > markdown h4 1`] = `
[
  {
    "attrs": {
      "level": 4,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > headings > markdown h5 1`] = `
[
  {
    "attrs": {
      "level": 5,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > headings > markdown h6 1`] = `
[
  {
    "attrs": {
      "level": 6,
    },
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "heading",
  },
]
`;

exports[`parse > nodes > hr > html 1`] = `
[
  {
    "type": "horizontalRule",
  },
]
`;

exports[`parse > nodes > hr > markdown 1`] = `
[
  {
    "type": "horizontalRule",
  },
]
`;

exports[`parse > nodes > html > block 1`] = `
[
  {
    "content": [
      {
        "text": "example",
        "type": "text",
      },
    ],
    "type": "html-node",
  },
]
`;

exports[`parse > nodes > html > disabled 1`] = `
[
  {
    "content": [
      {
        "text": <custom-element>
</custom-element>,
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > html > inline 1`] = `
[
  {
    "content": [
      {
        "type": "html-node",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > image > html 1`] = `
[
  {
    "attrs": {
      "alt": "example",
      "height": null,
      "src": "example.jpg",
      "title": null,
      "width": null,
    },
    "type": "image",
  },
]
`;

exports[`parse > nodes > image > markdown 1`] = `
[
  {
    "attrs": {
      "alt": "example",
      "height": null,
      "src": "example.jpg",
      "title": null,
      "width": null,
    },
    "type": "image",
  },
]
`;

exports[`parse > nodes > image > markdown inline 1`] = `
[
  {
    "content": [
      {
        "attrs": {
          "alt": "example",
          "height": null,
          "src": "example.jpg",
          "title": null,
          "width": null,
        },
        "type": "image",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > ordered list > html 1`] = `
[
  {
    "attrs": {
      "start": 1,
      "tight": true,
      "type": null,
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "example1",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "example2",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "orderedList",
  },
]
`;

exports[`parse > nodes > ordered list > markdown 1`] = `
[
  {
    "attrs": {
      "start": 1,
      "tight": true,
      "type": null,
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "example1",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "example2",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "orderedList",
  },
]
`;

exports[`parse > nodes > paragraph > html 1`] = `
[
  {
    "content": [
      {
        "text": "example1",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
  {
    "content": [
      {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > paragraph > markdown 1`] = `
[
  {
    "content": [
      {
        "text": "example1",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
  {
    "content": [
      {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse > nodes > table > html 1`] = `
[
  {
    "content": [
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example1",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example2",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
        ],
        "type": "tableRow",
      },
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example3",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example4",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
    ],
    "type": "table",
  },
]
`;

exports[`parse > nodes > table > markdown 1`] = `
[
  {
    "content": [
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example1",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example2",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
        ],
        "type": "tableRow",
      },
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example3",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example4",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
    ],
    "type": "table",
  },
]
`;

exports[`parse > options > inline > text 1`] = `
[
  {
    "text": "example",
    "type": "text",
  },
]
`;

exports[`parse > options > inline > text with spaces 1`] = `
[
  {
    "text": "  example ",
    "type": "text",
  },
]
`;
